--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "find-up-path",
   "repository": "github:fabiospampinato/find-up-path",
   "description": "Find the path of the first file matching a given name, walking the filesystem upwards.",
+  "license": "MIT",
   "version": "1.0.0",
   "type": "module",
   "main": "dist/index.js",
@@ -23,9 +24,9 @@
     "path"
   ],
   "devDependencies": {
-    "@types/node": "^20.11.24",
-    "fava": "^0.3.2",
-    "tsex": "^3.2.0",
-    "typescript": "^5.3.3"
+    "@types/node": "^18.19.70",
+    "fava": "^0.3.4",
+    "tsex": "^4.0.2",
+    "typescript": "^5.7.3"
   }
 }
